--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Lets Check your Multiplication skills Ha Ha Ha</h1>
 
         <input
-            type="number"
+        inputmode="numeric" pattern="[0-9]*" type="text"
             class="form-input"
             id="item-input"
             name="item"
@@ -29,7 +29,7 @@
             </div>
             <div id="result">
                 <input
-                type="number"
+                inputmode="numeric" pattern="[0-9]*" type="text"
                 class="resultclass"
                 id="item-result"
                 placeholder="Enter Answer"
